# winterhack

./: README.md  install_gazebo_landerpi.sh  install_ros2_humble.sh  killros.sh  winterhack_commands.md
ros2_ws/: .typerc
ros2_ws/src/landerpi_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/landerpi_description/launch/: display.launch.py  robot_description.launch.py  rviz.launch.py
ros2_ws/src/landerpi_description/meshes/acker/: base_link.stl
ros2_ws/src/landerpi_description/meshes/arm/: camera_connect_link.STL  depth_cam_link.STL  gripper_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
ros2_ws/src/landerpi_description/meshes/gripper/: gripper_base_link.STL  gripper_left_link.STL  gripper_right_link.STL  guide_rod_link.STL  left_jaw_link.STL  right_jaw_link.STL
ros2_ws/src/landerpi_description/urdf/: ack.xacro  arm.urdf.xacro  gripper.urdf.xacro  landerpi.xacro  mecanum.xacro  tank.xacro
ros2_ws/src/robot_gazebo/config/: localization.yaml  nav2_params_exploration.yaml  robot_config.yaml  slam.yaml
ros2_ws/src/robot_gazebo/launch/: navigation.launch(old).py  navigation.launch.py  navigation_exploration.launch.py  room_worlds.launch.py  ros_ign_bridge.launch.py  slam.launch.py  spawn_model.launch.py  worlds.launch.py
ros2_ws/src/robot_gazebo/robot_gazebo/: teleop_key_control.py
ros2_ws/src/robot_gazebo/rviz/: nav_nav2.rviz  slam_exploration.rviz
ros2_ws/src/robot_gazebo/urdf/: camera.gazebo.xacro  jetrover.gazebo.xacro  lidar.gazebo.xacro  robot.gazebo.xacro  wheel_base.urdf.xacro
ros2_ws/src/robot_gazebo/worlds/: robocup_home.sdf  winterhack_maze.sdf
ros2_ws/src/winterhack/: .setup_assistant  package.xml  setup.cfg  setup.py
ros2_ws/src/winterhack/config/: colors.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rosmentor.ros2_control.xacro  rosmentor.srdf  rosmentor.urdf
ros2_ws/src/winterhack/launch/: localization.launch.py  moveit.launch.py  navigation.launch.py  slam.launch.py  winterhack.launch.py
ros2_ws/src/winterhack/resource/: winterhack
ros2_ws/src/winterhack/rviz/: moveit.rviz  nav_moveit.rviz
ros2_ws/src/winterhack/winterhack/: __init__.py  detect.py  drop.py  gripper_client.py  locate.py  mission_runner.py  moveit2_client.py  pick.py
ros2_ws/src/winterhack_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/winterhack_interfaces/action/: Locate.action
ubuntu_gpu_guide/dual-boot-nvidia/: README.md
ubuntu_gpu_guide/windows-wsl-nvidia/: README.md
(+16 files in other folders)
